--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <main>
         <h1>Les sujets préférés d'Amjad</h1>
-        <p>Dans cet article, je vais présenter les sujet d'Amjad vu que je dois insérer des vidéos et des audios et que je ne sais pas quoi mettre ^-^</p>
+        <p>Dans cet article, je vais présenter les sujets préférés d'Amjad vu que je dois insérer des vidéos et des audios et que je ne sais pas quoi mettre ^-^</p>
         <section>
             <h2>D'abord, la musique :</h2>
             <p>Amjad étant l'âme délicat et sensible qu'il pense être, aime beaucoup les chansons douces et sans paroles, l'une d'entre elle est la suivante :</p>
